/* $Id: ChangeLog,v 1.1253 2001-02-14 10:35:58 sandervl Exp $ */

 2001-02-14: Sander van Leeuwen <sandervl@xs4all.nl>
    - KERNEL32: o Allocate TLS index of module before loading the dll it needs
                  (some apps assume their executable index is always zero)
                  (fixes crash in BrMSX)
                o Must use EXC_CallHandler to call RtlUnwind handler
                  (fixes crash during RaiseException in BrMSX)
    - INCLUDE\misc.h:
                o Print file and function name before executing an int 3. (DebugInt3)

 2000-02-13: Michal Necasek <mike@mendelu.cz>
    - USER32:   o Wrong unicode<->ascii translation for some listbox & combobox
                  messages. Must check if the control style includes LB/CB_HASSTRINGS.
                  (CB_FINDSTRING, CB_FINDSTRINGEXACT, CB_SELECTSTRING,
                   LB_FINDSTRING, LB_FINDSTRINGEXACT, LB_SELECTSTRING)

 2001-02-11: knut st. osmundsen <knut.stange.osmundsen@mynd.no>
    - Win32k:   o Added symbols for the 14062D kernels.
                o Added a query API for getting memory information.
                o Added force preload option - should be very useful when
                  debugging Ring 3 apps with ICAT. (Option -F)

 2001-02-11: Sander van Leeuwen <sandervl@xs4all.nl>
    - ODINCRT:  o Completed runtime dll for VAC 3.6.5
    - WINMM, GLU, CRTDLL, KERNEL32:
                o Compile fixes for VAC 3.6.5
    - RASAPI32: o Can't use LXLITE as it crashes on this binary
    - KERNEL32: o Check handle in LocalLock and return NULL if invalid
                  (some apps use LocalLock to get access to GDI objects; doesn't 
                   work in Odin (TODO))

 2001-02-10: Sander van Leeuwen <sandervl@xs4all.nl>
    - USER32:   o Check if window has been destroyed before accessing
                  this pointer again in SendInternalMessage.
                  (fixes heap corruption in MS Visual C++ 4.2 install)